<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="the.fiesta.OysterBake.Companion.AdminStageList">

    <TextView
        android:id="@+id/txtStagetitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:textColor="@android:color/holo_purple"
        android:textSize="15sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/bStage1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stage_1" />

    <Button
        android:id="@+id/bStage2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stage_2" />

    <Button
        android:id="@+id/bStage3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stage_3" />

    <Button
        android:id="@+id/bStage4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stage_4" />

    <Button
        android:id="@+id/bStage5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stage_5" />

</LinearLayout>